# crawler-kit

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  Makefile  README.md  demo.py  firebase.json  prefect.toml  pyproject.toml  results.json
data/: ebay_data.csv  get_data.ipynb  get_data.py  lazada_data.csv
functions/: main.py
functions/crawler_kit/entrypoints/cli/: __init__.py
functions/crawler_kit/entrypoints/cli/crawler/: __init__.py  crawl.py
functions/crawler_kit/entrypoints/cli/greet/: __init__.py  handle_hello.py
functions/crawler_kit/entrypoints/cli/typer/: __init__.py
functions/crawler_kit/entrypoints/http/: __init__.py
functions/crawler_kit/entrypoints/utils/google_cloud/: publish_message.py
functions/crawler_kit/utils/google_cloud/: publish_message.py  run_job.py
src/: main.py
src/crawler_kit/entrypoints/cli/: __init__.py
src/crawler_kit/entrypoints/cli/amazon/: __init__.py
src/crawler_kit/entrypoints/cli/ebay/: __init__.py
src/crawler_kit/entrypoints/cli/greet/: __init__.py
src/crawler_kit/entrypoints/http/: admin.py
src/crawler_kit/entrypoints/pubsub/: on_crawling_amazon.py  on_crawling_ebay.py  on_crawling_lazada.py  on_pchome_message_received.py  on_test_message_received.py
src/crawler_kit/infrastructure/: __init__.py
src/crawler_kit/infrastructure/webdriver/: __init__.py  seleniumbase_manager.py
src/crawler_kit/modules/general/enums/: topic.py  (+1 more)
src/crawler_kit/utils/: environments.py
src/crawler_kit/utils/google_cloud/: publish_message.py  run_job.py  set_object.py
src/crawler_kit/utils/lifespans/: startup.py
(+47 files in other folders)
